# changescout

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: filter.yaml  scope.yaml  scoring.yaml
config/sources/: ag.yaml  be.yaml  sg.yaml  uri.yaml  zh.yaml  zh_v2.yaml
docs/: annotation_guidelines.md  architecture.md  environment.md  tlm_model_basic.md
scripts/: add_location_hints_to_leads.py  build_annotation_dataset.py  build_monitoring_summary.py  enrich_location_hints_geoadmin.py  evaluate_scoring_against_annotations.py  export_to_excel.py  generate_baseline_leads.py  repair_encoding.py  run.sh  train_baseline_classifier.py
src/changescout/: annotation.py  classification.py  cli.py  config.py  crawling.py  decision.py  discovery.py  filtering.py  geoadmin.py  geography.py  html_cleaning.py  io.py  leads.py  models.py  pipeline.py  scoring.py  snapshot.py
src/changescout.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_classification.py  test_config.py  test_crawling.py  test_decision.py  test_discovery.py  test_filtering.py  test_geoadmin.py  test_geography.py  test_html_cleaning.py  test_leads.py  test_pipeline.py  test_scoring.py
tools/annotation/: export_to_excel.py
